Added Job related features like add, edit, delete, search

--- a/jobApp/src/main/resources/application.properties
+++ b/jobApp/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=jobApp
+
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:test
+
+spring.jpa.generate-ddl=true
+
+# Show all executed SQL queries
+spring.jpa.show-sql=true
+
+# Format the SQL queries for better readability
+spring.jpa.properties.hibernate.format_sql=true
+
