--- a/jobApp/pom.xml
+++ b/jobApp/pom.xml
@@ -39,6 +39,17 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+		
+		<!--Used for health monitoring and manage applications-->
+		<!--production ready features 
+			built in endpoints
+			/metric 
+			customizable -->	
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
