--- a/jobApp/src/main/resources/application.properties
+++ b/jobApp/src/main/resources/application.properties
@@ -11,3 +11,29 @@ spring.jpa.show-sql=true
 # Format the SQL queries for better readability
 spring.jpa.properties.hibernate.format_sql=true
 
+#actuator start#
+#expose all actuator endpoint
+management.endpoints.web.exposure.include=*
+
+#add health related endpoints
+management.endpoint.health.show-details=always
+
+#info endpoint - configured statically or dynamically generated
+management.info.env.enabled=true
+info.app.name=JopApplication
+info.app.description=Job App Built By Harsh
+info.app.version=1.0.0
+
+#metrics
+#loggers-> we can change logging level without restarting applications
+#use below property to expose only LOGGER endpoint in actuator
+#management.endpoints.web.exposure.include=LOGGER
+
+#/beans - gives details like scope, bean name, type, dependencies,etc for all the beans in the spring application
+# For security reasons -> /shutdown is not exposed
+# expose it via below property
+#/shutdown - allows graceful shutdown - means app will shutdown only after completing ongoing requests
+management.endpoint.shutdown.enabled=true
+server.shutdown=graceful
+
+#actuator end#
