--- a/jobApp/src/main/resources/application.properties
+++ b/jobApp/src/main/resources/application.properties
@@ -1,17 +1,29 @@
 spring.application.name=jobApp
 
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:test
+#h2 db config
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:test
 
+#postgresql db configs
+spring.datasource.url=jdbc:postgresql://localhost:5432/jobapp
+spring.datasource.username=harsh
+spring.datasource.password=1234
+spring.jpa.databse=POSTGRESQL
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+#show ddl queries logs
 spring.jpa.generate-ddl=true
 
 # Show all executed SQL queries
 spring.jpa.show-sql=true
 
+#how to keep the data on each restart of app
+spring.jpa.hiberate.ddl-auto=update
+
 # Format the SQL queries for better readability
 spring.jpa.properties.hibernate.format_sql=true
 
-#actuator start#
+####################actuator start#############################
 #expose all actuator endpoint
 management.endpoints.web.exposure.include=*
 
@@ -36,4 +48,4 @@ info.app.version=1.0.0
 management.endpoint.shutdown.enabled=true
 server.shutdown=graceful
 
-#actuator end#
+####################actuator end#############################
